--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "tutorial",
     "demo"
   ],
-  "author": "Viking Zhang",
-  "license": "CC0-1.0",
+  "author": "",
+  "license": "",
   "devDependencies": {
     "electron": "^5.0.6",
     "electron-builder": "^20.40.2",
